--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "spark"]
 	path = spark
-	url = https://github.com/bolt-os/spark
+	url = https://github.com/archaic-archea/spark/tree/wip-mem-dtb-req
